k2 training related (not yet done)

--- a/espresso/tools/Makefile
+++ b/espresso/tools/Makefile
@@ -1,5 +1,6 @@
 KALDI =
 PYTHON_DIR = /export/b03/ywang/anaconda3/bin
+CMAKE = /home/ywang/cmake-3.18.4-Linux-x86_64/bin/cmake
 
 CXX ?= g++
 
@@ -30,6 +31,7 @@ kaldi:
 endif
 
 clean: openfst_cleaned
+	rm -rf k2
 	rm -rf lhotse
 	rm -rf pychain
 	rm -rf kaldi
@@ -85,3 +87,8 @@ pychain:
 lhotse:
 	test -d lhotse || git clone https://github.com/lhotse-speech/lhotse.git
 	export PATH=$(PYTHON_DIR):$$PATH && cd lhotse && pip install -e .
+
+.PHONY: k2
+k2:
+	test -d k2 || git clone https://github.com/k2-fsa/k2.git
+	cd k2 && mkdir -p build && cd build && $(CMAKE) .. && $(MAKE)
